# blog_rust_back

./: .gitignore  Cargo.toml  docker-compose.yaml  example.env
src/: config.rs  main.rs
src/controllers/: health_check.rs  users.rs
src/handlers/: users.rs
src/models/: user.rs
src/schemas/: base_http.rs  mod.rs  user_schemas.rs
src/utils/: errors.rs
