[package]
name = "blog_rust_back"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.21.*", features = ["full"] }
actix-web = "4.2.*"

serde = { version = "1.0.*", features = ["derive"]}
serde_json = "1.0.*"

sqlx = { version = "0.6.*", features = ["runtime-tokio-rustls", "postgres", "json"] }

dotenv = "0.7.*"
tracing = "0.1.*"
tracing-subscriber = { version = "0.3.*", features = ["env-filter"] }
