[package]
name = "blog_rust_back"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.21.*", features = ["full"] }
actix-web = "4.2.*"

serde = { version = "1.0.*", features = ["derive"]}
serde_json = "1.0.*"
derive_more = "0.99.*"

sqlx = { version = "0.6.*", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }
chrono = { version = "0.4.*", features = ["serde"] }
uuid = { version = "1.2.*", features = [ "v4", "serde"] }


dotenv = "0.7.*"
tracing = "0.1.*"
tracing-subscriber = { version = "0.3.*", features = ["env-filter"] }
